Bug 1846165 - Disable video overlay if mVideoSwapChain->Present() or mCompositionDevice->Commit() with video overlay is too slow r=gfx-reviewers,bradwerth

Check of mVideoSwapChain->Present() was already added by Bug 1818685. This change adds check of mCompositionDevice->Commit().

Differential Revision: https://phabricator.services.mozilla.com/D186527